i386: Require MMX for builtins with MMX register

When MMX is disabled, MMX registers aren't available.  We shouldn't
allow builtins with MMX registers when MMX registers aren't available.
This applies to MMX and 3DNow builtins as well as SSE builtins with
MMX registers.

Also we should always declare all builtins and ix86_expand_builtin
will give an error if the builtin isn't available.

gcc.target/i386/crc32-4.c is updated to scan __builtin_ia32_crc32di only
for ia32 since __builtin_ia32_crc32di is a normal function for ia32 and
a builtin function for x86-64.

Tested on i686 and x86-64.

gcc/

	PR target/79565
	* config/i386/i386-builtin.def: Add OPTION_MASK_ISA_MMX to all
	builtins with MMX register.
	* config/i386/i386.c (def_builtin): Always declare all builtins.
	(ix86_expand_builtin): Check if MMX is enabled for builtins with
	MMX register.
	* config/i386/sse.md: Require TARGET_MMX for all patterns with
	MMX register.

gcc/testsuite/

	PR target/79565
	* gcc.target/i386/crc32-4.c: Scan __builtin_ia32_crc32di only
	for ia32 target.
	(crc32d): Check for "needs isa option" error for non-ia32
	targets.
	* gcc.target/i386/pr70325.c (f): Check for "needs isa option"
	error instead.
	* gcc.target/i386/pr79565.c: New test.