gcc/testsuite/gcc.target/i386/pr70325.c
@@ -8,5 +8,5 @@ typedef int I __attribute((__vector_size__(32)));
 void
 f(int a,I b)
 {
-  __builtin_ia32_storedquqi256_mask((C*)f,(C)b,a); /* { dg-warning "implicit declaration of function" } */
+  __builtin_ia32_storedquqi256_mask((char *)f,(C)b,a); /* { dg-error "needs isa option\[^\n\r]*-mavx512vl -mavx512bw" } */
 }
